--- a/style.css
+++ b/style.css
@@ -206,7 +206,7 @@ p{
 
 /*hero section*/
 #hero {
-	background-image: url(./img/sam2.jpg);
+	background-image: url(./img/SAM2.jpg);
 	background-size: cover;
 	background-position: top center;
 	position: relative;
